--- a/res/layout/correct_answer.xml
+++ b/res/layout/correct_answer.xml
@@ -4,10 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/imageView1"
+    <ImageButton
+        android:id="@+id/imageButton1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/correct" />
+        android:src="@drawable/correct" 
+        android:clickable="true"
+        android:onClick="MainActivity.class"/>
 
 </LinearLayout>
