--- a/res/layout/tfquiz.xml
+++ b/res/layout/tfquiz.xml
@@ -3,39 +3,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="10dp"
-    android:orientation="vertical">
-
+    android:orientation="vertical" >
+   
     <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:text="@+string/app_name" />
-    <CheckBox
-        android:id="@+id/checkBox1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1" />
-    <CheckBox
-        android:id="@+id/checkBox1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="2" />
-    <CheckBox
-        android:id="@+id/checkBox1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="3" />
-    <CheckBox
-        android:id="@+id/checkBox1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="4" />
+           android:text="Question?" />
     
-    <Button
-	    android:id="@+id/buttonca"
+	<RadioGroup
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content" >
+
+    <RadioButton
+        android:id="@+id/radioButton5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="True" />
+
+    <RadioButton
+        android:id="@+id/radioButton6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="False" />
+    </RadioGroup>
+
+   <Button
+	    android:id="@+id/buttontf"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:text="@string/check_answer"
+	    android:text="@string/check_answer" 
 	    android:gravity="center"/>
-        
+   
 </LinearLayout>
